# poly_tonho

./: run.lastbuildstate
run.dir/Debug/: run.lastbuildstate
run.dir/Release/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
videoPolynom_wx_tracking/: CMakeLists.txt  Makefile  POLYMCPP.cbp  ccmake.sh  cmake_install.cmake  logitech.sh  logitech.sh.save  run  updateTemplates.sh
videoPolynom_wx_tracking/src/camModule/: CMakeLists.txt  Makefile  camModule.cpp  camModule.h  cmake_install.cmake  logitechWrapper.cpp  logitechWrapper.h
videoPolynom_wx_tracking/src/classifiers/: .polyMahalanobis.h.swo  CMakeLists.txt  Makefile  background.cpp  background.h  cmake_install.cmake  debug.h  pattern.cpp  pattern.h  polyMahalanobis.cpp  polyMahalanobis.h
videoPolynom_wx_tracking/src/detector/: CMakeLists.txt  detector.cpp  detector.h
videoPolynom_wx_tracking/src/dip/: .frameObjects.cpp.swp  CMakeLists.txt  Makefile  cmake_install.cmake  diffGray.cpp  diffGray.h  dilate.cpp  dilate.h  frameObjects.cpp  frameObjects.h  labeling.cpp  tracking.cpp  tracking.h  trajectories.cpp
videoPolynom_wx_tracking/src/dip/tracking/: labeling.h  trajectories.h
videoPolynom_wx_tracking/src/drawing/: CMakeLists.txt  Makefile  cmake_install.cmake  cycImageHolderMaha.cpp  cycImageHolderMaha.h  cycImageHolderTopolMaps.cpp  cycImageHolderTopolMaps.h  cycImageHolderTrack.cpp  cycImageHolderTrack.h
videoPolynom_wx_tracking/src/gui/: CMakeLists.txt  Makefile  cmake_install.cmake  dlg_colormodel.cpp  dlg_colormodel.h  dlg_pattern.cpp  dlg_pattern.h  dlg_topologicalmap.cpp  dlg_topologicalmap.h  frm_main.cpp  frm_main.h  gui.pjd  guiapp.cpp  guiapp.h
videoPolynom_wx_tracking/src/imageView/: CMakeLists.txt  Makefile  cmake_install.cmake  cycEvtReferences.cpp  cycEvtReferences.h  cycImageDraw.cpp  cycImageDraw.h  cycImageHolder.cpp  cycImageHolder.h  cycMouseEvt.cpp  cycMouseEvt.h
videoPolynom_wx_tracking/src/run.dir/: CXX.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  link.txt
videoPolynom_wx_tracking/src/util/: CMakeLists.txt  Makefile  cmake_install.cmake  colorSpace.cpp  colorSpace.h
